--- a/src/view/pages/myStreams.html
+++ b/src/view/pages/myStreams.html
@@ -364,7 +364,7 @@
                           ID: ${streamId}
                         </p>
                         <div class="mt-auto d-grid gap-2">
-                          <a href="watchStream?id=${streamId}" class="btn btn-primary">
+                          <a href="watchStream?${streamName}" class="btn btn-primary">
                             <i class="fas fa-play-circle me-2"></i>Assistir
                           </a>
                                                         <button type="button" 
